--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "next": "^11.1.2",
-    "next-themes": "0.0.15",
-    "react": "17.x",
-    "react-dom": "17.x",
-    "react-rough-notation": "^1.0.1"
+    "axios": "^1.6.0",
+    "next": "^14.0.0",
+    "next-themes": "^0.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-rough-notation": "^1.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.1",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0"
   }
 }
